<resources>
    <string name="app_name">FocusFlow</string>
    <string name="welcome">Welcome Back!</string>
    <string name="addTask">Add your task here</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search_reminder">Search reminder</string>
    <string name="add_reminder_hint">No reminders added yet.\nPlease click plus to add a reminder</string>

    <string name="add_app_id">ca-app-pub-1433704113656055~7992609748</string>
    <string name="rss_banner_unit_id">ca-app-pub-1433704113656055/9819535807</string>
</resources>

