<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_reminder_gradient">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/add_reminder_back"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/addTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/addTask"
                android:textColor="@color/White"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/abyssinica_sil"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLength="100"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:fontFamily="@font/abyssinica_sil"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:maxLines="10"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/abyssinica_sil"
                    android:padding="10dp"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/selectDateButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/select_date"
                    android:textColor="@color/White" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/timeTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/abyssinica_sil"
                    android:padding="10dp"
                    android:text="@string/time"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/selectTimeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/select_time"
                    android:textColor="@color/White" />

            </LinearLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="sans-serif-black"
                android:text="@string/save"
                android:textColor="@color/White" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>