<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/abyssinica_sil"
            android:text="@string/welcome"
            android:textColor="@color/ac4"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="wrap_content"
            android:layout_height="121dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="252dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="62dp"
            android:src="@drawable/app_logo" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchET"
            android:layout_width="344dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundbarsearch"
            android:imeOptions="actionSearch"
            android:inputType="text"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_reminder"
            tools:visibility="visible" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_reminder"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_below="@+id/headerLayout"
        android:layout_marginTop="-1dp"
        android:background="@color/White"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/item_reminder" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        android:gravity="center"
        android:padding="19dp"
        android:text="@string/add_reminder_hint"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="850dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/addTask"
        android:tint="@color/White"
        app:srcCompat="@android:drawable/ic_input_add" />


</RelativeLayout>

